fix collapse button

--- a/src/ui/themes/nfors/theme.css
+++ b/src/ui/themes/nfors/theme.css
@@ -159,6 +159,11 @@
   width: 20px;
 }
 
+/* move collapse to bottom */
+.global-nav__links-section:nth-of-type(2) {
+  order: 2;
+}
+
 .global-nav__links-section:nth-child(2) > .attribution-logo.global-nav-link:hover {
   background-color: transparent !important;
 }
@@ -301,4 +306,5 @@ button.login:focus,
 
 #ror_logout {
   background-color: #2a2320 !important;
+  margin-top: auto;
 }
